Ingress/Controller/nginx/ingressDeployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: servicio-ingress-catalog
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: publico.chaphe-bookstore.com
    http:
      paths:
      - path: /catalog
        pathType: Prefix
        backend:
          service:
            name: frontend-catalog-service
            port:
              number: 30100

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: servicio-ingress-reviews
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: publico.chaphe-bookstore.com
    http:
      paths:
      - path: /reviews
        pathType: Prefix
        backend:
          service:
            name: frontend-reviews-service
            port:
              number: 30101

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: servicio-ingress-store
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: publico.chaphe-bookstore.com
    http:
      paths:
      - path: /store
        pathType: Prefix
        backend:
          service:
            name: frontend-store-service
            port:
              number: 30102
